cluster/longhorn-system/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-dashboard
  namespace: longhorn-system
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`longhorn.kevin.tomalias.com`)
      kind: Rule
      services:
        - name: longhorn-frontend
          port: 80
  tls:
   secretName: tomalias-com-tls
